@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CsvExporter {
     private CsvExporter() {}
@@ -19,7 +20,7 @@ public class CsvExporter {
             double sum=0.0;
             for (Order o : orders){
                 for (OrderItem i : o.getItems()) {
-                    Product p = products.stream().filter((p1)->i.getProduct().getId()==p1.getId()).toList().get(0);
+                    Product p = products.stream().filter((p1)->i.getProduct().getId()==p1.getId()).collect(Collectors.toList()).get(0);
                     w.write(o.getId() + "," + p.getName() + "," + i.getQuantity() + "," + i.getTotal() + "\n");
                 }
                 w.write("total order: "+o.getTotal()+" RON\n");
